Bug 152106 - can not open particular DOCX file
Summary: can not open particular DOCX file
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-11-18 11:15 UTC by NISZ LibreOffice Team
Modified: 2023-05-20 20:50 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
The file which doesn't open in LO (18.72 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2022-11-18 11:15 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-11-18 11:15:10 UTC
Description:
The attached file does not open anymore. And I don't receive any error message.

Steps to Reproduce:
1. Open the attached file in LO

Actual Results:
LO does not open the document. 

Expected Results:
LO open the attached file.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5b0a6621858b141022743dd8d500558895dedb1f
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded

Bibisect with: win64-7.1

commit c99acbdb9e157842de4d5bdef58d05c596c7e767
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Sun Aug 8 14:11:47 2021 -0700

    source f20c91fe2c997bd5966c902ee28f95531435ec26

    source f20c91fe2c997bd5966c902ee28f95531435ec26
Comment 1 NISZ LibreOffice Team 2022-11-18 11:15:57 UTC
Created attachment 183662 [details]
The file which doesn't open in LO
Comment 2 stragu 2022-11-18 15:52:52 UTC
Confirmed that it can be opened with:

Version: 7.1.8.1 / LibreOffice Community
Build ID: e1f30c802c3269a1d052614453f260e49458c82c
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: de-DE (en_AU.UTF-8); UI: en-US
Calc: threaded

but not:

Version: 7.2.7.2 / LibreOffice Community
Build ID: 8d71d29d553c0f7dcbfa38fbfda25ee34cce99a2
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: de-DE (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 3 Commit Notification 2022-11-19 10:21:30 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6f0736c2981042f90e83cdd71b3f9c91dbe77661

tdf#152106 sw layout: fix freezing of multicol sections with flys

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 László Németh 2022-11-19 10:25:12 UTC
tdf#152106 sw layout: fix freezing of multicol sections with flys

Loading documents with multicol sections with flys could
freeze Writer. Add loop control for multicol sections to fix it.

Regression from commit 8feac9601cfe35ee0966776bab15d122206f154e
"tdf#138518 sw: layout: avoid moving flys forward prematurely".

Follow-up to ed12269c42f75f553bb8a8770923406f7824e473
"tdf#142080 sw: layout: fix infinite loop in CalcContent()".
Comment 5 Commit Notification 2022-11-22 07:24:35 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/9300c36361426e724b28c25a7729543b316b258b

tdf#152106 sw layout: fix freezing of multicol sections with flys

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 stragu 2022-11-23 11:50:49 UTC
Verified as fixed in:

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1435c5b12646269e2b5b58ec7d51626dce6505db
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thank you László! :)