tdf#152106 sw layout: fix freezing of multicol sections with flys

Loading documents with multicol sections with flys could
freeze Writer. Add loop control for multicol sections to fix it.

Regression from commit 8feac9601cfe35ee0966776bab15d122206f154e
"tdf#138518 sw: layout: avoid moving flys forward prematurely".

Follow-up to ed12269c42f75f553bb8a8770923406f7824e473
"tdf#142080 sw: layout: fix infinite loop in CalcContent()".

Change-Id: I06eb3f5a26b2d2ac3999b98a9661112b8bf7738f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142950
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>